--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - jupyter=1.0.0
   - matplotlib=3.8
   - pillow=10.3
+  - pip=24.0
   - python=3.11
   - pytorch=2.3.0
   - scikit-learn=1.4.2
